tests/trybuild/stages/unexpected_command.rs
use brood::system::schedule::stages;

type Stages = stages!{
    unexpected,
};

fn main() {}
